{
    "name": "GameplayInputMaps",
    "maps": [
        {
            "name": "Common",
            "id": "62cc3f4f-b60f-42ea-b09e-54fa016cb4a9",
            "actions": [
                {
                    "name": "MouseLeftClick",
                    "type": "Button",
                    "id": "ee942446-953e-4e01-858a-14fb84e7cfce",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "MouseRightClick",
                    "type": "Button",
                    "id": "43901800-30f2-45f0-8c87-537ced39217d",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "MousePosition",
                    "type": "Value",
                    "id": "ae748020-764b-49e2-8b2c-07aac79e7195",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Escape",
                    "type": "Button",
                    "id": "2a29ecf0-dd60-403e-9b4a-46f0aa0cf713",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "AltHotKey",
                    "type": "Button",
                    "id": "18ceb679-e8b6-49d1-8e9e-f06f6f4c3d67",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "CtrlHotKey",
                    "type": "Button",
                    "id": "fb66b8d5-69c1-4920-9a25-ee66e5e6eaf3",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "1396f0e3-a498-4631-9c33-277fc62e92ab",
                    "path": "<Mouse>/leftButton",
                    "interactions": "Press",
                    "processors": "",
                    "groups": "",
                    "action": "MouseLeftClick",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "2c9ad183-9b3e-4507-b3fe-0246105f506f",
                    "path": "<Mouse>/rightButton",
                    "interactions": "Press",
                    "processors": "",
                    "groups": "",
                    "action": "MouseRightClick",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "0808e1a1-969a-4332-95a0-afbb9cc3ca32",
                    "path": "<Mouse>/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MousePosition",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "d1c4ff6a-f08a-48fb-b18f-e23797c5df44",
                    "path": "<Keyboard>/escape",
                    "interactions": "Tap",
                    "processors": "",
                    "groups": "",
                    "action": "Escape",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "fbd33764-6196-4086-8ea7-20caa65c1b99",
                    "path": "<Keyboard>/leftAlt",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "AltHotKey",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "e7bb968a-1d8a-4640-b252-03ae48bc3b79",
                    "path": "<Keyboard>/ctrl",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "CtrlHotKey",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "Topdown",
            "id": "6a4f8c0c-c4a5-4ccb-b55c-974440380f92",
            "actions": [
                {
                    "name": "Zoom",
                    "type": "Value",
                    "id": "2d656791-0710-4896-a366-d54ac1e26ba5",
                    "expectedControlType": "Axis",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "DragActivation",
                    "type": "Button",
                    "id": "d9cfff9e-a4f6-4da4-a696-ecda8e9262a9",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "DragPerform",
                    "type": "Value",
                    "id": "6a5af712-34c7-4952-a0bf-a67bb843a6fe",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Confirm",
                    "type": "Button",
                    "id": "34275364-de5d-4a2d-a92c-db193d5805c9",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Focus",
                    "type": "Button",
                    "id": "3c7b13cd-7639-4028-9489-08764149736c",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Reposition",
                    "type": "Button",
                    "id": "417ea0ff-b7de-4f4f-8aa0-55c0e54cfa0e",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "1323e2af-40c4-4e5e-ae52-810306d335c6",
                    "path": "<Mouse>/scroll/y",
                    "interactions": "",
                    "processors": "Scale(factor=0.00083)",
                    "groups": "",
                    "action": "Zoom",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "bb1ff79c-c6da-4e7f-ac4e-a84a99f8309d",
                    "path": "<Mouse>/leftButton",
                    "interactions": "Hold",
                    "processors": "",
                    "groups": "",
                    "action": "DragActivation",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "27d519a8-d2b7-4591-8cd0-8c94e343013b",
                    "path": "<Keyboard>/c",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Confirm",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "ad85b1d6-a795-47a1-b17c-e0eaa5ffb4b1",
                    "path": "<Mouse>/delta",
                    "interactions": "",
                    "processors": "ScaleVector2(x=0.1,y=0.1)",
                    "groups": "",
                    "action": "DragPerform",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "28fb798d-5554-4edc-9912-004455cd82e1",
                    "path": "<Keyboard>/f",
                    "interactions": "Press",
                    "processors": "",
                    "groups": "",
                    "action": "Focus",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "f084eaba-c46d-4817-b899-e9a649b31d91",
                    "path": "<Keyboard>/f",
                    "interactions": "MultiTap",
                    "processors": "",
                    "groups": "",
                    "action": "Reposition",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "Constructing",
            "id": "856632e0-8aff-4825-b29c-f2c1d9d68322",
            "actions": [
                {
                    "name": "SwitchConstructStatus",
                    "type": "Button",
                    "id": "52241623-45a0-489a-b74c-a55f45464dce",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "ConstructOrbit",
                    "type": "Button",
                    "id": "634ee585-b295-407d-9cff-b8a1e930960f",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "ConstructPlanet",
                    "type": "Button",
                    "id": "f1941711-dae8-4693-9bf5-8eb418161000",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "00a1916b-3df4-4a8b-9902-89f8d9411a96",
                    "path": "<Keyboard>/1",
                    "interactions": "Tap",
                    "processors": "",
                    "groups": "",
                    "action": "ConstructOrbit",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "3cf57a5a-7e52-41f9-97df-e6940ece7170",
                    "path": "<Keyboard>/2",
                    "interactions": "Tap",
                    "processors": "",
                    "groups": "",
                    "action": "ConstructPlanet",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "b43487a0-130e-49f7-bed4-9c11eb3c77a0",
                    "path": "<Keyboard>/tab",
                    "interactions": "Press",
                    "processors": "",
                    "groups": "",
                    "action": "SwitchConstructStatus",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "AbilityCast",
            "id": "f1d3c777-1920-4793-9896-e98f48a83fd7",
            "actions": [
                {
                    "name": "AbilityCast_Q",
                    "type": "Button",
                    "id": "76cd1dd6-db4a-4159-b3f5-49690a4070d7",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "AbilityCast_W",
                    "type": "Button",
                    "id": "ed25b787-1aba-4dcd-9b0d-88cd460bb033",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "AbilityCast_E",
                    "type": "Button",
                    "id": "3ed0e960-2b96-41fc-a6f7-cd7333616156",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "AbilityCast_R",
                    "type": "Button",
                    "id": "86b5f365-d3f6-46da-a1c3-43226f60455d",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "AbilityCast_T",
                    "type": "Button",
                    "id": "1f98fc8e-eb08-4bf9-bd33-8349d51044ad",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "AbilityCast_Y",
                    "type": "Button",
                    "id": "4aff903b-7723-4501-89ea-38e18114f2d9",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "SelectorPosition",
                    "type": "Value",
                    "id": "d1a67ded-a474-47a5-bb7b-46c73f7b7280",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "SelectorConfirm",
                    "type": "Button",
                    "id": "fa1eec31-a7a1-4848-8f21-9a929a1f0b53",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "SelectorCancel",
                    "type": "Button",
                    "id": "6b068622-98ef-4f9c-bab4-72a25254dfd0",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "7dbcbb6b-50c2-486a-aeba-eb499fdb0384",
                    "path": "<Keyboard>/q",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "AbilityCast_Q",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "5759ed5d-5b91-4ed1-be04-60d42e50e3ca",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "AbilityCast_W",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "aa2262ab-b534-4120-9632-b5d5bdad2db8",
                    "path": "<Keyboard>/r",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "AbilityCast_R",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "3db3f64e-7869-46a3-821b-637e5c6da61a",
                    "path": "<Mouse>/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "SelectorPosition",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "1bf63c27-6ecc-4694-8452-5d9d24a3f919",
                    "path": "<Mouse>/leftButton",
                    "interactions": "Press(behavior=1)",
                    "processors": "",
                    "groups": "",
                    "action": "SelectorConfirm",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "a602fcb1-cfa2-43db-856d-e12ff67f02fb",
                    "path": "<Mouse>/rightButton",
                    "interactions": "Press(behavior=1)",
                    "processors": "",
                    "groups": "",
                    "action": "SelectorCancel",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "d7bf3af5-1d9d-466e-95c8-44aaae24e3e9",
                    "path": "<Keyboard>/e",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "AbilityCast_E",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "165bcc38-118d-48da-9569-ef6cc6dc7d05",
                    "path": "<Keyboard>/t",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "AbilityCast_T",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "823a715c-424f-4804-a0d5-449121b898da",
                    "path": "<Keyboard>/y",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "AbilityCast_Y",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "SpeedControl",
            "id": "039284dc-f063-4a34-8fef-03247920d0ab",
            "actions": [
                {
                    "name": "SpeedControl_0",
                    "type": "Button",
                    "id": "4b183e83-6704-4b7e-991e-402ffc6494dc",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "SpeedControl_1",
                    "type": "Button",
                    "id": "5e5035d0-d62b-4d7d-b658-5cf9a290999b",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "SpeedControl_2",
                    "type": "Button",
                    "id": "7a3ae481-d68c-40b8-9539-16345be53e3c",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "SpeedControl_3",
                    "type": "Button",
                    "id": "6e3c0584-ea3c-4b79-9b63-980c4c769055",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "340439bf-6c7f-4b13-9949-58abb1fb1f27",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "SpeedControl_0",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "24a2eda1-80ff-408f-8f73-57301abaa580",
                    "path": "<Keyboard>/1",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "SpeedControl_1",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "7aec0f74-b3eb-4ccb-aeba-c663a66ddc18",
                    "path": "<Keyboard>/2",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "SpeedControl_2",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "9c0f493e-7cc0-4bb4-a4de-fb9398453c95",
                    "path": "<Keyboard>/3",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "SpeedControl_3",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}